Implement given rewards functionality when user match or raise the criteria then user get the reward based on the matched criteria as the user reached to the creteria he/she get the certificate ofthe rewards & get reward  badge , certificate send to the user via email and mail for contribution 2)Implement OpenRouter API for auto suggestion for campaign creation to get the description based on given tittle , UI for Auto generated text is remaining 3)Implement the audit logs to tract the activity of the user

--- a/Crowd_Funding_Platform/Views/Account/GoogleCallback.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/GoogleCallback.cshtml
@@ -19,10 +19,10 @@
             .then(res => res.json())
             .then(data => {
                 if(!data.success){
-                            showToast(result.message, "error")
+                            alert(result.message)
                 }
-                if (data.success && data.redirect) {
-                    window.location.href = data.redirect;
+                if (data.success && data.redirectUrl) {
+                    window.location.href = data.redirectUrl;
                 }
                 else if (!data.success && data.redirect) {
                     window.location.href = data.redirect;
@@ -34,7 +34,7 @@
                 }
             })
             .catch(err => {
-                            showToast("Unknown error occurred", "error")
+                            alert("Unknown error occurred")
                 console.error(err);
                 window.location.href = "/Account/login";
             });
