--- a/Crowd_Funding_Platform/Views/Account/Registration.cshtml
+++ b/Crowd_Funding_Platform/Views/Account/Registration.cshtml
@@ -94,18 +94,11 @@
                                         </div> 
                                         <div class="card-body" style="    margin-top: -25px;">
                                             <form id="Registration" method="post">
-                                                @* <div class="form-row">
-                                                    <div class="form-group col-md-6 mb-50">
-                                                        <label asp-for="Username"></label>
-                                                        <input asp-for="Username" class="form-control" placeholder="Enter Username" />
-                                                    </div>
- 
-                                                    <div class="form-group col-md-6 mb-50">
-
-                                                        <label asp-for="Email"></label>
-                                                        <input asp-for="Email" class="form-control" placeholder="Enter Email" />
-                                                    </div>
-                                                </div> *@
+                                                @if (ViewBag.GoogleData != null)
+                                                {
+                                                    <input type="hidden" value="true" asp-for="EmailVerified" readonly />
+                                                    <input type="hidden" value="true" asp-for="IsGoogleAccount" readonly />
+                                                }
                                                 <div class="form-group mb-50">
                                                     <label class="text-bold-600" asp-for="Username">username</label>
                                                     <input asp-for="Username" class="form-control"
@@ -113,15 +106,33 @@
                                                 </div>
                                                 <div class="form-group mb-50">
                                                     <label class="text-bold-600" asp-for="Email">Email address</label>
-                                                    <input asp-for="Email" class="form-control"
-                                                           placeholder="Email address">
+                                                    <input asp-for="Email" class="form-control" placeholder="Email address" 
+                                                    value="@(ViewBag.GoogleData != null ? ViewBag.GoogleData.Email : "")">
                                                 </div>
+
                                                 <div class="form-group mb-50" style="margin-top: 1px;">
                                                     <label class="text-bold-600" asp-for="PhoneNumber">Phone Number</label><br />
                                                     <input asp-for="PhoneNumber" class="form-control" id="PhoneNo"
                                                            placeholder="PhoneNumber">
                                                 </div>
                                                 <div class="form-group mb-2">
+                                                    <label class="text-bold-600" asp-for="PasswordHash">Password</label>
+                                                    <input asp-for="PasswordHash" class="form-control" placeholder="Password" id="PasswordHash" type="password" 
+                                                    value="@(ViewBag.GoogleData != null ? ViewBag.GoogleData.PasswordHash : "")">
+                                                    <button type="button" class="btn toggle-password-btn" data-target="#PasswordHash" style="margin-top: 8px;">
+                                                        <i class="fa fa-eye"></i>
+                                                    </button>
+                                                    <small id="password-strength" class="text-muted"></small>
+                                                </div>
+                                                <div class="form-group mb-2" style="margin-top: -13px;">
+                                                    <label class="text-bold-600" asp-for="ConfirmPassword">Confirm Password</label>
+                                                    <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password" id="ConfirmPassword" type="password" 
+                                                    value="@(ViewBag.GoogleData != null ? ViewBag.GoogleData.ConfirmPassword : "")">
+                                                    <button type="button" class="btn toggle-password-btn" data-target="#ConfirmPassword" style="margin-top: 8px;">
+                                                        <i class="fa fa-eye"></i>
+                                                    </button>
+                                                </div>
+                                               @*  <div class="form-group mb-2">
                                                     <label class="text-bold-600" asp-for="PasswordHash">Password</label>
                                                     <input asp-for="PasswordHash" class="form-control" placeholder="Password" id="PasswordHash" type="password">
                                                     <button type="button" class="btn toggle-password-btn" data-target="#PasswordHash" style="margin-top: 8px;">
@@ -135,7 +146,7 @@
                                                     <button type="button" class="btn toggle-password-btn" data-target="#ConfirmPassword" style="margin-top: 8px;">
                                                         <i class="fa fa-eye"></i>
                                                     </button>
-                                                </div>
+                                                </div> *@
                                                 <button type="submit" value="Register" id="btnRegister" class="btn btn-primary glow position-relative w-100">
                                                     <span class="spinner-border spinner-border-sm d-none" id="btnLoader" role="status" aria-hidden="true"></span>
 
