--- a/Crowd_Funding_Platform/Views/Profile/EditProfile.cshtml
+++ b/Crowd_Funding_Platform/Views/Profile/EditProfile.cshtml
@@ -270,6 +270,12 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+   
+
+  @*   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script> *@
+
     <script>
         // Profile Image Preview
         function previewImage(event) {
@@ -280,14 +286,14 @@
             reader.readAsDataURL(event.target.files[0]);
         }
 
-    function previewImage(event) {
-        var reader = new FileReader();
-        reader.onload = function () {
-            var output = document.getElementById('profilePreview');
-            output.src = reader.result;
-        };
-        reader.readAsDataURL(event.target.files[0]);
-    }
+    // function previewImage(event) {
+    //     var reader = new FileReader();
+    //     reader.onload = function () {
+    //         var output = document.getElementById('profilePreview');
+    //         output.src = reader.result;
+    //     };
+    //     reader.readAsDataURL(event.target.files[0]);
+    // }
 
     // Opens the file upload dialog
     function openFileUpload() {
